--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -40,7 +40,7 @@
       <p
               class="archive__item-excerpt" itemprop="description">{{ post.citation }}
         {% if post.mark%}
-        <br>({{post.mark}})</br>
+        <b>({{post.mark}})</b>
         {% endif %}
       </p>
     {% endif %}
