--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -116,8 +116,8 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
 
-    {% if post.img_path %}
-    <img src='/images/{{post.img_path}}'>
+    {% if post.img %}
+    <img src='/images/{{post.img}}'>
     {% endif %}
 
 
