--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -117,7 +117,7 @@
     {% endif %}
 
     {% if post.img %}
-    <img src='/images/{{post.img}}'>
+    <img src='/images/{{post.img}}' style="max-width: 500px; height: auto;">
     {% endif %}
 
 
